--- a/.env
+++ b/.env
@@ -1,1 +1,35 @@
+# DockerHub image
+DOCKERHUB_NAMESPACE=ulugbekdae
+DOCKERHUB_REPOSITORY=yt_api_elt
+IMAGE_TAG=1.0.1
+ 
+# Postgres connection - POSTGRES_CONN_USERNAME set to the default postgres user to not create another db
+POSTGRES_CONN_USERNAME=postgres
+POSTGRES_CONN_PASSWORD="postgres1234"
+POSTGRES_CONN_HOST=postgres
+POSTGRES_CONN_PORT=5432
+ 
+# Metadata database credentials
+METADATA_DATABASE_NAME=airflow_metadata_db
+METADATA_DATABASE_USERNAME=airflow_meta_user
+METADATA_DATABASE_PASSWORD="metadata1234"
+ 
+# Celery database credentials
+CELERY_BACKEND_NAME=celery_results_db
+CELERY_BACKEND_USERNAME=celery_user
+CELERY_BACKEND_PASSWORD="celery1234"
+ 
+# ELT database credentials
+ELT_DATABASE_NAME=elt_db
+ELT_DATABASE_USERNAME=yt_api_user
+ELT_DATABASE_PASSWORD="elt_db_1234"
+ 
+# Airflow params 
+AIRFLOW_UID="50000"
+AIRFLOW_WWW_USER_USERNAME="airflow"
+AIRFLOW_WWW_USER_PASSWORD="airflow1234"
+FERNET_KEY="pKInkePlkl79C3mafrjthiQdXnsDU8EXjWDZi-SU00U="
+ 
+# Youtube params
 API_KEY = "AIzaSyBxoWu8fLElMx7vOuT2WfZ_MMzxrWuS_0c"
+CHANNEL_HANDLE = "MrBeast"
