--- a/.github/workflows/ci-cd_yt-elt.yaml
+++ b/.github/workflows/ci-cd_yt-elt.yaml
@@ -28,23 +28,17 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Log in to Dockerhub 
         if: steps.changed-files-build.outputs.any_changed == 'true'
-        uses: docker/setup-buildx-action@v3
+        uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Build and push Docker image
         if: steps.changed-files-build.outputs.any_changed == 'true'
         run: |
-            echo "🚀 Starting Docker build"
-            echo "Repo: ${{ vars.DOCKERHUB_NAMESPACE }}/${{ vars.DOCKERHUB_REPOSITORY }}"
-            echo "SHA: ${{ github.sha }}"
-
             docker buildx build --push \
               --tag ${{ vars.DOCKERHUB_NAMESPACE }}/${{ vars.DOCKERHUB_REPOSITORY }}:latest \
               --tag ${{ vars.DOCKERHUB_NAMESPACE }}/${{ vars.DOCKERHUB_REPOSITORY }}:${{ github.sha }} \
               .
-
-            echo "✅ Docker build & push finished"
 
   unit-and-integration-ande2e-tests:
     runs-on: ubuntu-latest
