--- a/.github/workflows/ci-cd_yt-elt.yaml
+++ b/.github/workflows/ci-cd_yt-elt.yaml
@@ -71,7 +71,7 @@ jobs:
       - name: Checkout Code 
         uses: actions/checkout@v4
       - name: Get Changed Files 
-        id: changed-files-build
+        id: changed-files-tests
         uses: tj-actions/changed-files@v45
         with: 
           files: | 
