--- a/.github/workflows/ci-cd_yt-elt.yaml
+++ b/.github/workflows/ci-cd_yt-elt.yaml
@@ -76,7 +76,7 @@ jobs:
           files: |
               dags/**
               include/**
-              docker-compose.yml
+              docker-compose.yaml
       - name: Set up Docker Compose
         if: steps.changed-files-tests.outputs.any_changed == 'true'
         run: docker compose up -d
