--- a/.github/workflows/ci-cd_yt-elt.yaml
+++ b/.github/workflows/ci-cd_yt-elt.yaml
@@ -86,7 +86,7 @@ jobs:
       - name: Run End-to-End DAG Tests
         if: steps.changed-files-tests.outputs.any_changed == 'true'
         run: |
-          DAG_NAMES=("produce_json" "update_db" "data_quality")
+          DAG_NAMES=("produce_json" "update_db" "dq_checks")
           for DAG in "${DAG_NAMES[@]}"; do 
             docker exec -t airflow-worker sh -c "airflow dags test $DAG"
           done
